<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- This layout could use Linear layout, but for understanding and better positioning,
     Constraint layout is used-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.login.LoginFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/brand_logo"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/emailTextField"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:layout_margin="@dimen/layout_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="#616161"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:layout_margin="@dimen/layout_margin"
            app:endIconMode="password_toggle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="#616161"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_margin="@dimen/layout_margin"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTextField"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:layout_margin="@dimen/layout_margin"
            style="?borderlessButtonStyle"

            app:layout_constraintEnd_toStartOf="@id/loginButton"
            app:layout_constraintTop_toBottomOf="@id/passwordTextField"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>